# metadata

./: .pre-commit-config.yaml  LICENSE  METATEXTER_WORD.docx  README.md  generate_text_file_from_yaml.py  metadata_key.txt  pyproject.toml  readme_key.txt  requirements.txt  text_file_from_all.txt  ~$TATEXTER_WORD.docx
.github/workflows/: format_lint_and_test.yml
dcat_ap_se/: 0_template.yaml  bacterioplankton_nat.yaml  chlorophyll.yaml  datahost.yaml  epibenthos_nat.yaml  epibenthos_reg.yaml  geographic_coverage.yaml  geographic_coverage.yml  greyseal_nat.yaml  harbourporpoise.yaml  harbourseal_nat.yaml  keywords.yaml  labo.yaml  laboratory.yaml  license.yaml  license.yml  metadata_template.yaml  metadata_template.yml  methods.yaml  methods.yml  orderer.yaml  orderer.yml  physicalchemical.yaml  phytoplankton_nat.yaml  phytoplankton_reg_recip_proj.yaml  picoplankton.yaml  planktonbarcoding_nat.yaml  primaryproduction.yaml  profile.yaml  purpose.yaml  ringedseal_nat.yaml  sealpathology.yaml  sedimentation.yaml  titles.yaml  titles.yml  titles_2.yaml  url_linkage.yaml  zoobenthos_nat.yaml  zoobenthos_reg_recip_proj.yaml  zooplankton_nat.yaml
shark_package/: abstract.yaml  originator_contact.yaml
src/metadata/: __init__.py  generate_text_file_from_yaml.py  metadata.py
src/metadata/dcat_ap_se/: datahost.yaml  metadata_template.yaml  orderer.yaml  purpose.yaml  titles.yaml
src/metadata/shark_package/: discipline.yaml  misc.yaml  readme.yaml
tests/: test_write_metadata.py
